Fixed package json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-slick",
   "version": "0.9.3",
   "description": " React port of slick carousel",
-  "main": "./lib",
+  "main": "./dist/react-slick.min.js",
   "scripts": {
     "start": "./node_modules/.bin/gulp server",
     "prepublish": "./node_modules/.bin/babel ./src --out-dir ./lib && ./node_modules/.bin/gulp dist",
